# FireflyEnch

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  app.py  build.sh  config.json  config.py  config.py.example  db.py  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  json.py  logging_utils.py  makefile  mfb.py  mjson.py  models.py  nsfw_detector.py  phash_index.py  pyproject.toml  req.txt  requirements.txt  utils.py
frontend/: AGENTS.md  about.html  backend.html  base.html  index.html  package.json  pnpm-lock.yaml  search.html  toolbox.html  vite.config.ts
frontend-vue/: package.json  pnpm-lock.yaml  vite.config.ts
frontend-vue/src/: App.vue
frontend-vue/src/api/: index.ts  types.ts
frontend-vue/src/components/: ImageCard.vue  ImageGallery.vue  NavBar.vue  ThemeSwitch.vue
frontend-vue/src/composables/: useTheme.ts
frontend-vue/src/router/: index.ts
frontend-vue/src/styles/: variables.css
frontend-vue/src/views/: About.vue  Backend.vue  Home.vue  Search.vue
frontend/src/: AGENTS.md  App.vue  auth.ts  main.ts
frontend/src/api/: index.ts  types.ts
frontend/src/components/: ImageCard.vue  ImageGallery.vue  NavBar.vue
frontend/src/composables/: useInfiniteScroll.ts  useTheme.ts
frontend/src/router/: index.ts
frontend/src/styles/: variables.css
frontend/src/views/: About.vue  Backend.vue  Home.vue  ImageDetail.vue  Search.vue
frontend/src/views/backend/: BackendImages.vue  BackendLayout.vue  BackendSystem.vue  BackendUpload.vue
frontend/statics/css/: base.css  bootstrap-icons.min.css  bootstrap.min.css  bs4pop-1.1.css  card.css
frontend/statics/js/: bs4pop-1.1-min.js  ds.js  metadata.t.js  spider.js
tests/: test_duplicate_detection.py  test_phash_index.py
