[project]
name = "fireflyench"
version = "0.1.0"
description = "FireflyEnch - 简单的图片画廊系统"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sanic>=24.6.0",
    "aiofiles>=23.2.1",
    "sanic-ext>=23.12.0",
    "tortoise-orm>=0.21.7",
    "aerich>=0.8.1",
    "click>=8.1.7",
    "jinja2>=3.1.4",
    "pydantic>=2.0.0"
]

[project.scripts]
fireflyench = "app:main"
build = "mfb:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
