[project]
name = "fireflyench"
version = "0.1.0"
description = "FireflyEnch - 简单的图片画廊系统"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "aiofiles>=23.2.1",
    "tortoise-orm>=0.21.7",
    "aerich>=0.8.1",
    "click>=8.1.7",
    "jinja2>=3.1.4",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "pillow>=12.2.0",
    "captcha>=0.7.1",
    "imagehash>=4.3.1",
    "httpx>=0.28.0",
    "onnxruntime>=1.27.0",
    "numpy>=2.4.6",
    "aiomysql>=0.2.0",
    "cryptography>=42.0.0",
]

[project.scripts]
fireflyench = "app:main"
build = "mfb:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.28.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "models", "db", "mfb"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
